# miku-sync

./: .clangd  .clangd.in  CMakeLists.txt  CMakePresets.json  README.md
include/: mikusync.hpp
src/: CMakeLists.txt  decode.cpp  interface.cpp  main.cpp  mikusync.hpp
